# material

./: .gitignore  LICENSE  Main.lean  Makefile  Material.lean  README.md  README_ZH_CN.md  TODO.org  data.csv  hctSolver.org  index.html  lake-manifest.json  lakefile.lean
.github/workflows/: lean_action_ci.yml
Image/c/: bindings.c
Image/ffi/: Image.lean
Image/futhark/: Makefile  OPTIMIZATION_NOTES.md  SUMMARY.md  futhark.pkg
Image/futhark/src/: celebi.fut  color.fut  load_image.h  quantize.c  wsmeans.fut  wu.fut
Material/Blend/: Blend.lean  Cam16jab.lean  Cam16ucs.lean
Material/Contrast/: Contrast.lean
Material/Dislike/: DislikeAnalyzer.lean
Material/DynamicColor/: ContrastCurve.lean  DSL.lean  DynamicColor.lean  DynamicScheme.lean  MDC.lean  MaterialDynamicColor.lean  Types.lean
Material/Extract/futhark/: CMakeLists.txt
Material/Extract/futhark/src/: celebi.fut  color.fut  color_extract_ffi.c  extract.fut  hct.fut  jpg.h  load_image.h  png.h  score.fut  target_pixels.h  wsmeans.fut  wu.fut
Material/Extract/lean/: Extract.lean
Material/Hct/: Cam16.lean  Hct.lean  HctSolver.lean  MaxChroma.lean  ViewingConditions.lean
Material/Palettes/: CorePalettes.lean  TonalPalette.lean
Material/Quantize/: PointProvider.lean  PointProviderLab.lean  Quantizer.lean  QuantizerCelebi.lean  QuantizerMap.lean  QuantizerResult.lean  QuantizerWu.lean
Material/Scheme/: DynamicScheme.lean  SchemeContent.lean  SchemeExpressive.lean  SchemeFidelity.lean  SchemeFruitSalad.lean  SchemeMonoChrome.lean  SchemeNeutral.lean  SchemeRainbow.lean  SchemeTonalSpot.lean  SchemeVibrant.lean
Material/Temperature/: TemperatureCache.lean
Material/Utils/: ColorUtils.lean  MathUtils.lean  StringUtils.lean
docs/: hctSolver.org  hctSolverZHCN.org
example/: example_result.txt  generate_visualization.py
example/visualization/: index.html
zig/: Makefile  build.zig  build.zig.zon
zig/src/: MaxChromaGen.zig  main.zig  rMinGen.zig  root.zig
zig/src/Contrast/: Contrast.zig
zig/src/Dislike/: DislikeAnalyzer.zig
zig/src/DynamicColor/: DynamicColor.zig  DynamicScheme.zig  MaterialDynamicColor.zig  Types.zig
zig/src/Extract/: extract.zig  load_image.zig
zig/src/Extract/futhark/src/: celebi.fut  color.fut  extract.fut  hct.fut  score.fut  wsmeans.fut  wu.fut
zig/src/Hct/: Cam16.zig  Hct.zig  HctSolver.zig  MaxChroma.zig  ViewingConditions.zig
zig/src/Palettes/: TonalPalette.zig
zig/src/Scheme/: AllScheme.zig  DynamicScheme.zig  SchemeContent.zig  SchemeExpressive.zig  SchemeFidelity.zig  SchemeFruitSalad.zig  SchemeMonoChrome.zig  SchemeNeutral.zig  SchemeRainbow.zig  SchemeTonalSpot.zig  SchemeVibrant.zig
zig/src/Temperature/: TemperatureCache.zig
zig/src/Utils/: ColorUtils.zig  MathUtils.zig  StringUtils.zig
